src/components/Breadcrumbs/styles.module.css
.locBreadcrumb {
  margin: 0 4px;
  color: #414141;
}

.locBreadcrumb:first-child{
  margin-left: 0;
}

@media (max-width: 720px){
  .locBreadcrumb:first-child{
    margin-left: 16px;
  }
}

.locBreadcrumbContainer {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  align-items: center;
  margin: 16px 0;
  font-size: 12px;
}

.search {
  width: 326px;
}

@media (max-width: 720px) {
  .search{
    width: 100%;
    margin: 16px 16px 0 16px;
  }
}

